tests/errors/diagnostics/suggestion_none.pts
function main() : void {
  int alpha = 1;
  int x = qzzzz;
}
